--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "peer": "^1.0.2"
+    "peerjs": "^1.5.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
