--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "peerjs": "^1.5.5"
+    "peerjs": "^1.5.5",
+    "peerjs-server": "^0.2.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
