--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "peer": "^1.0.2",
     "peerjs": "^1.5.5",
     "peerjs-server": "^0.2.9"
   },
