--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "peer": "^1.0.2",
     "peerjs": "^1.5.5",
-    "peerjs-server": "^0.2.9"
+    "peerjs-server": "^0.2.9",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
