--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,18 @@ dist
 dist-ssr
 *.local
 
+# Go build artifacts
+/server
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+go.work.sum
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +34,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
 *.env
+.env.local
+.env.*.local
